about page and attempt to fix cube dimension bug on mobile browsers

--- a/src/style.css
+++ b/src/style.css
@@ -126,6 +126,12 @@ main {
   }
 }
 
+@media (max-width: 400px) {
+  #tech-slider span {
+    display: none;
+  }
+}
+
 /*loading animation*/
 
 .lds-roller {
